# easy-langchain

./: main.py  pyproject.toml
chapter/: 02-model-04-invoke.ipynb  chat-bot.ipynb  chat-bot.py
