[project]
name = "easy-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.14",
    "anthropic==0.84.0",
    "click==8.3.1",
    "dashscope==1.25.6",
    "dataclasses-json==0.6.7",
    "fastapi==0.135.1",
    "fastmcp==3.2.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jupyter>=1.1.1",
    "langchain==1.2.12",
    "langchain-anthropic==1.3.4",
    "langchain-classic==1.0.2",
    "langchain-community==0.4.1",
    "langchain-core==1.2.18",
    "langchain-deepseek==1.0.1",
    "langchain-experimental==0.4.1",
    "langchain-mcp-adapters==0.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.11",
    "langchain-openrouter==0.1.0",
    "langchain-tavily==0.2.17",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.1.2",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-postgres==3.0.5",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.9",
    "loguru==0.7.3",
    "mcp==1.27.0",
    "ollama==0.6.2",
    "openai==2.26.0",
    "openrouter==0.7.11",
    "orjson==3.11.7",
    "psycopg-pool==3.3.0",
    "psycopg[binary]==3.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "sse-starlette==3.3.4",
    "tenacity==9.1.4",
    "tencentcloud-sdk-python==3.1.86",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "uvicorn==0.46.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
